fixed font and alignments

--- a/official-spotirank/src/App.css
+++ b/official-spotirank/src/App.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Rubik Pixels');
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
 
 body {
   background-color: rgb(0, 0, 0);
-  font-family: Rubik Pixels;
+  font-family: Permanent Marker;
   font-size: 25px;
 }
 
@@ -18,14 +18,14 @@ h5 {
 .artist-container {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center horizontally */
+  align-items: center;
   text-align: center;
 }
 
 .artist-card {
   display: flex;
-  flex-direction: column; /* Change to column */
-  align-items: center; /* Center horizontally */
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 20px;
 }
 
@@ -40,7 +40,7 @@ h5 {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  margin-bottom: 10px; /* Add space between the image and the name */
+  margin-bottom: 10px;
 }
 
 .artist-name {
@@ -59,23 +59,23 @@ ul {
 .button-container {
   display: flex;
   flex-direction: column;
-  justify-content: column; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  height: 100vh; /* Set height to viewport height for vertical centering */
+  justify-content: column;
+  align-items: center; 
+  height: 100vh;
 }
 
 .welcome-line {
   display: flex;
-  flex-direction: center;
+  flex-direction: column; 
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .login-button {
   background-color: rgb(30, 215, 96);
   border-radius: 50px;
   font-size: 30px;
+  font-family: Permanent Marker;
   border-color: rgb(0, 0, 0);
 }
-
-/* CSS FOR CARD STACKED IMAGES */
